Initial project commit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "build-plate-renderer",
   "private": true,
+  "workspaces": [
+    "apps/**",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
