Fixed build issues, updated demo app to use renderer, and more...

--- a/packages/build-plate-renderer/package.json
+++ b/packages/build-plate-renderer/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "build-plate-renderer",
+  "name": "@repo/build-plate-renderer",
   "private": false,
   "version": "0.1.0",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/**"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
+    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "clean": "rm -rf dist",
-    "lint": "tsc",
+    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src/",
     "format": "prettier --write ./src",
     "format:check": "prettier -->check ./src"
   },
