--- a/packages/build-plate-renderer/tsconfig.json
+++ b/packages/build-plate-renderer/tsconfig.json
@@ -7,6 +7,12 @@
       "@/*": [
         "./src/*"
       ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/utils/*": [
+        "./src/utils/*"
+      ],
     }
   },
   "include": [
