--- a/apps/build-plate-demo/tsconfig.json
+++ b/apps/build-plate-demo/tsconfig.json
@@ -5,7 +5,22 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "app/*"
+      ],
+      "@/components/*": [
+        "app/components/*"
+      ],
+      "@/lib/*": [
+        "app/lib/*"
+      ],
+      "@/styles/*": [
+        "app/styles/*"
+      ],
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -14,5 +29,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
